--- a/Pages/ComputerPlay.html
+++ b/Pages/ComputerPlay.html
@@ -9,7 +9,7 @@
     <title>GamePlay</title>
 </head>
 
-<body class="gamePlayBackground">
+<body class="gamePlayBackground fadeIn">
 <!-- GameInfo Section--------------------------------------------------------- -->
     <br>
     <div class="gameInfoContainer">
@@ -82,6 +82,11 @@
     </div>
     <hr>
 
+    <div class="exitButtonContainer">
+        <div class="exitBTN">
+            <a class="Exit" href="../index.html">Exit</a>
+        </div>
+    </div>
     <script type="module" src="../Scripts/ComputerChoice.js"></script>
 </body>
 
