--- a/Pages/GamePlay.html
+++ b/Pages/GamePlay.html
@@ -9,7 +9,7 @@
     <title>GamePlay</title>
 </head>
 
-<body class="gamePlayBackground">
+<body class="gamePlayBackground fadeIn">
     <!-- Game info Section--------------------------------------------------------------------------------- -->
     <div class="gameInfoContainer">
         <div id="gameInfoBox">
@@ -98,6 +98,11 @@
         </div>
         <div id="spockBTN2" class="spockButton">
             <h2>Spock</h2>
+        </div>
+    </div>
+    <div class="exitButtonContainer">
+        <div class="exitBTN">
+            <a class="Exit" href="../index.html">Exit</a>
         </div>
     </div>
 
