--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Instructions Section------------------------------------------------------------------------------------------------- -->
     <div class="instructionsContainer">
-        <a href="./pages/instructions.html" class="instructionsButton">
+        <a href="./Pages/instructions.html" class="instructionsButton">
             <h2>Instructions</h2>
         </a>
     </div>
